[package]
name = "template-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
axum = "0.7.7"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
utoipa = "5.2.0"
utoipa-axum = "0.1.2"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
